css/valley.css
/* ... */
.text-primary {
  color: #A1A744;
}
.navbar-fixed-top {
  margin-bottom: 0;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
  color: #A1A744;
  background-color: white;
  border-radius: 0;
}
.navbar-default {
  background-color: #A1A744;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form, 
.navbar-inverse .navbar-collapse, 
.navbar-inverse .navbar-form {
  border-color: rgba(255, 255, 255, 0.5);
}

.navbar-inverse {
  background-color: #9ACB2C;
}
.navbar-default,
.navbar-inverse {
  border: none;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}
.navbar-default .navbar-toggle,
.navbar-inverse .navbar-toggle {
  color: white;
  font-size: 14px;
  padding: 6px 10px;
  border-color: #fff;
}
.navbar-default .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus,
.navbar-inverse .navbar-toggle:focus {
  background-color: white;
  color: #222;
}
.navbar-default .navbar-brand,
.navbar-inverse .navbar-brand {
  color: white;
  opacity: 1;
  text-decoration: none;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
  font-family: "Antropos", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 900;
  text-transform: uppercase;
  font-size: 24px;
}
.navbar-default .navbar-brand:hover,
.navbar-inverse .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-inverse .navbar-brand:focus {
  opacity: 1;
}
.navbar-default .navbar-brand img,
.navbar-inverse .navbar-brand img {
  margin-top: -10px;
  height: 40px;
}
.navbar-default .navbar-nav > li > a,
.navbar-inverse .navbar-nav > li > a {
  color: white;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:hover {
  color: rgba(255, 255, 255, 0.5);
}
@media (min-width: 768px) {
  .navbar-default .navbar-nav > .active > a,
  .navbar-default .navbar-nav > .active > a:hover,
  .navbar-default .navbar-nav > .active > a:focus,
  .navbar-inverse .navbar-nav > .active > a,
  .navbar-inverse .navbar-nav > .active > a:hover,
  .navbar-inverse .navbar-nav > .active > a:focus {
    border-radius: 5px;
  }
  .navbar-fixed-top.navbar-expanded {
    padding: 30px 0;
  }
  .navbar-fixed-top {
    padding: 15px 0;
    -webkit-transition: padding 0.5s;
    -moz-transition: padding 0.5s;
    transition: padding 0.5s;
  }
  .navbar-fixed-top .navbar-brand:hover {
    opacity: 0.5;
  }
  .navbar-default.navbar-expanded,
  .navbar-inverse.navbar-expanded {
    background: transparent;
    border: none;
  }
}
.navbar a:focus {
  outline: none;
}
.navbar .navbar-nav li a:focus {
  outline: none;
}
header {
  position: relative;
  display: block;
  height: auto;
  width: auto;
  background-color: #222;
  background: no-repeat center center;
  background-attachment: scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  padding: 100px 0;
}
header .intro-content {
  color: white;
  text-align: center;
  position: relative;
}
header .brand-name {
  font-family: "Antropos", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 55px;
  line-height: 55px;
  text-transform: uppercase;
  font-weight: 900;
  margin-top: 15px;
}
header .brand-name-subtext {
  font-size: 20px;
  line-height: 20px;
  font-weight: 300;
}
header img {
  max-width: 150px;
  max-height: 150px;
}
header .scroll-down {
  position: absolute;
  width: 100%;
  bottom: 20px;
  text-align: center;
}
header .scroll-down .btn {
  height: 50px;
  width: 50px;
  border: 2px solid white;
  border-radius: 100% !important;
  line-height: 50px;
  padding: 0;
  letter-spacing: normal;
  color: white;
  font-size: 30px;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
header .scroll-down .btn:hover {
  color: rgba(255, 255, 255, 0.5);
  border-color: rgba(255, 255, 255, 0.5);
  outline: none;
}
@media (min-width: 768px) {
  header {
    height: 100%;
    width: 100%;
    padding: 0;
    background-attachment: scroll;
  }
  header .intro-content {
    color: white;
    text-align: center;
    width: 50%;
    margin: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }
  header .brand-name {
    font-size: 80px;
    line-height: 80px;
  }
  header .brand-name-subtext {
    font-size: 30px;
    line-height: 30px;
  }
  header img {
    max-width: 250px;
    max-height: 250px;
  }
}
@media (min-width: 1025px) {
  header {
    background-attachment: fixed;
  }
}
header.video .overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  background: #000;
  z-index: 998;
  opacity: 0;
}
header.video .intro-content {
  z-index: 999;
}
header.video .scroll-down {
  z-index: 999;
}
@media (min-width: 768px) {
  header.video .overlay {
    opacity: 0.5;
  }
}
aside.cta-quote {
  color: white;
  background-color: #222;
  background: no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  padding: 100px 0;
  text-align: center;
}
aside.cta-quote span.quote {
  display: block;
  font-size: 30px;
  line-height: 32px;
  font-weight: 300;
}
@media (min-width: 768px) {
  aside.cta-quote {
    background-attachment: scroll;
    padding: 150px 0;
  }
  aside.cta-quote span.quote {
    font-size: 36px;
    line-height: 38px;
  }
}
@media (min-width: 992px) {
  aside.cta-quote {
    padding: 300px 0;
  }
  aside.cta-quote span.quote {
    font-size: 40px;
    line-height: 42px;
  }
}
@media (min-width: 1025px) {
  aside.cta-quote {
    background-attachment: fixed;
  }
}
.testimonials {
  text-align: center;
}
/* ... */

